--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Ada assistant</title>
+	<script src="tf.min.js"></script>
+	<script src="speech-commands.min.js"></script>
 </head>
 <body>
 	<div id="root"></div>
