Create square background and holographic projection

--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,22 @@
 <html>
 <head>
 	<title>Ada assistant</title>
-	<script src="tf.min.js"></script>
-	<script src="speech-commands.min.js"></script>
+	<script src="modules/tf.min.js"></script>
+	<script src="modules/speech-commands.min.js"></script>
+	<script src='modules/dat.gui.min.js'></script>
+	<script src='modules/three/three.min.js'></script>
+	<script src='modules/three/CopyShader.js'></script>
+	<script src='modules/three/EffectComposer.js'></script>
+	<script src='modules/three/RenderPass.js'></script>
+	<script src='modules/three/ShaderPass.js'></script>
+	<script src='modules/three/HorizontalBlurShader.js'></script>
+	<script src='modules/three/VerticalBlurShader.js'></script>
+	<script src='modules/three/FilmShader.js'></script>
+	<script src='modules/three/LuminosityHighPassShader.js'></script>
+	<script src='modules/three/UnrealBloomPass.js'></script>
+	<script src='modules/three/BadTVShader.js'></script>
 </head>
-<body>
+<body style="min-height: 100vh; background-color: #000; overflow-y: hidden;">
 	<div id="root"></div>
 </body>
 </html>
